<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edit_text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_title"/>
    <EditText
        android:id="@+id/edit_text_thoughts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_thoughts"/>
    <Button
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"/>
    <Button
        android:id="@+id/show_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_data_text"/>
    <Button
        android:id="@+id/update_all"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_all"/>
    <Button
        android:id="@+id/delete_all"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_all"/>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/rec_title"
            android:layout_width="wrap_content"
            android:textSize="28sp"
            android:layout_height="wrap_content"/>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>